--- a/package.json
+++ b/package.json
@@ -8,15 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@superwf/mobx-react-router": "^7.4.0",
     "@tailwindcss/forms": "^0.5.1",
     "axios": "^0.27.2",
     "axios-auth-refresh": "^3.2.2",
-    "daisyui": "^2.14.3",
-    "mobx": "^6.5.0",
-    "mobx-react": "^7.4.0",
+    "daisyui": "^2.15.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hot-toast": "^2.2.0",
     "react-query": "^3.38.1",
     "react-query-auth": "^1.1.0",
     "react-router": "^6.3.0",
