--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tabler/icons": "^1.70.0",
     "@tailwindcss/forms": "^0.5.1",
+    "@types/numeral": "^2.0.2",
     "axios": "^0.27.2",
     "axios-auth-refresh": "^3.2.2",
     "daisyui": "^2.15.3",
+    "date-fns": "^2.28.0",
+    "framer-motion": "^6.3.11",
+    "numeral": "^2.0.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hot-toast": "^2.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-query": "^3.38.1",
     "react-query-auth": "^1.1.0",
     "react-router": "^6.3.0",
